added metadata to cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "custom_enum_traits"
 version = "0.1.0"
 edition = "2018"
+license = "MIT"
+description = "A set of traits for dealing with enums."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
